# mini-grpc

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: docker-image.yml
examples/: crypto.rs  stocks.rs
proto/: crypto.proto  news.proto  sherpa.proto  stock.proto
src/: client.rs  lib.rs  server.rs
src/examples/: news.rs  stock.rs
src/services/: crypto.rs  mod.rs  news.rs  stock.rs
